--- a/index.html
+++ b/index.html
@@ -550,6 +550,15 @@
         при оформленні замовлення 120% знижка
       </div>
     </div>
+    <div class="preloader__wrapper">
+      <div class="preloader">
+        <div class="preloader__item"></div>
+        <div class="preloader__item"></div>
+        <div class="preloader__item"></div>
+        <div class="preloader__item"></div>
+        <div class="preloader__item"></div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/form.js"></script>
@@ -558,5 +567,6 @@
     <script src="js/latest-news.js"></script>
     <script src="js/useractivity.js"></script>
     <script src="js/infoFromJSON.js"></script>
+    <script src="js/preloader.js"></script>
   </body>
 </html>
