added form validation

--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                   id="name"
                   placeholder="Enter your name..."
                   required
+                  pattern="[A-Z][a-z]*"
                 />
                 <input
                   type="text"
@@ -394,6 +395,7 @@
                   id="surname"
                   placeholder="Enter your surname..."
                   required
+                  pattern="[A-Z][a-z]*"
                 />
               </div>
               <input
