--- a/index.html
+++ b/index.html
@@ -11,12 +11,50 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="mob-nav__wrapper">
+      <div id="mob-nav" class="mob-nav">
+        <button class="mob-nav__close-btn">×</button>
+        <div class="mob-nav__inner">
+          <ul class="mob-nav__links">
+            <li>
+              <a class="mob-nav__link" href="#">HOME</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#project">PROJECT</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#services">SERVICES</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#about">ABOUT</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#blog">BLOG</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#">SHOP</a>
+            </li>
+            <li>
+              <a class="mob-nav__link" href="#contact">CONTACT</a>
+            </li>
+          </ul>
+          <button class="button mob-nav__sign-up-button">Sign Up</button>
+        </div>
+      </div>
+    </div>
     <div class="wrapper">
       <header class="header" id="home">
         <div class="container">
           <div class="header__inner">
+            <div class="header__menu-toggle">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
             <div class="header__logo">
-              <a href="#"><img src="img/logo.png" alt="Decbase" /></a>
+              <a href="#"
+                ><img src="blocks/header/img/logo.png" alt="Decbase"
+              /></a>
             </div>
             <nav class="header__nav">
               <ul class="header__nav-links">
@@ -67,7 +105,10 @@
                 <button class="button">CONTACT</button>
               </div>
               <div class="modern-interior__image">
-                <img src="img/modernInterior.png" alt="Interior Design" />
+                <img
+                  src="blocks/modern-interior/img/modernInterior.png"
+                  alt="Interior Design"
+                />
               </div>
             </div>
           </div>
@@ -79,7 +120,8 @@
             <ul class="our-services__filter-buttons">
               <li>
                 <button
-                  id="all" class="button our-services__filter-btn our-services__filter-btn--active"
+                  id="all"
+                  class="button our-services__filter-btn our-services__filter-btn--active"
                 >
                   ALL
                 </button>
@@ -103,7 +145,10 @@
             <div class="our-services__items">
               <div class="our-services__item">
                 <div class="our-services__item-image">
-                  <img src="img/ourService1.png" alt="Interior Design 1" />
+                  <img
+                    src="blocks/our-service/img/ourService1.png"
+                    alt="Interior Design 1"
+                  />
                 </div>
                 <div class="our-services__item-title">Interior Design 1</div>
                 <div class="our-services__item-description">
@@ -113,7 +158,10 @@
               </div>
               <div class="our-services__item">
                 <div class="our-services__item-image">
-                  <img src="img/ourService1.png" alt="Architecture 1" />
+                  <img
+                    src="blocks/our-service/img/ourService1.png"
+                    alt="Architecture 1"
+                  />
                 </div>
                 <div class="our-services__item-title">Architecture 1</div>
                 <div class="our-services__item-description">
@@ -123,7 +171,10 @@
               </div>
               <div class="our-services__item">
                 <div class="our-services__item-image">
-                  <img src="img/ourService3.png" alt="Planning 1" />
+                  <img
+                    src="blocks/our-service/img/ourService3.png"
+                    alt="Planning 1"
+                  />
                 </div>
                 <div class="our-services__item-title">Planning 1</div>
                 <div class="our-services__item-description">
@@ -133,7 +184,10 @@
               </div>
               <div class="our-services__item">
                 <div class="our-services__item-image">
-                  <img src="img/ourService3.png" alt="Planning 1" />
+                  <img
+                    src="blocks/our-service/img/ourService3.png"
+                    alt="Planning 1"
+                  />
                 </div>
                 <div class="our-services__item-title">Planning 1</div>
                 <div class="our-services__item-description">
@@ -143,7 +197,10 @@
               </div>
               <div class="our-services__item">
                 <div class="our-services__item-image">
-                  <img src="img/ourService3.png" alt="Planning 1" />
+                  <img
+                    src="blocks/our-service/img/ourService3.png"
+                    alt="Planning 1"
+                  />
                 </div>
                 <div class="our-services__item-title">Planning 1</div>
                 <div class="our-services__item-description">
@@ -158,7 +215,7 @@
           <div class="container">
             <div class="about-us__inner">
               <div class="about-us__image">
-                <img src="img/aboutUs.png" alt="Interiors" />
+                <img src="blocks/about-us/img/aboutUs.png" alt="Interiors" />
               </div>
               <div class="about-us__info">
                 <div class="about-us__sub-title">ABOUT US</div>
@@ -191,7 +248,10 @@
                 <button class="button">READ MORE</button>
               </div>
               <div class="successful-working__image">
-                <img src="img/successfulWorking.png" alt="Interior" />
+                <img
+                  src="blocks/successful-working/img/successfulWorking.png"
+                  alt="Interior"
+                />
               </div>
             </div>
           </div>
@@ -233,90 +293,108 @@
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial1.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial1.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Louis Saville<span>/CEO at Google Inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial2.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial2.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Rekha Varadwaz<span>/Manager at Nike inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial2.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial2.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Olha Varadwaz<span>/Manager at Nike inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial2.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial2.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Kamila Varadwaz<span>/Manager at Nike inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial2.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial2.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Roxa Varadwaz<span>/Manager at Nike inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
                   <div class="testimonials-slider__item-wrapper swiper-slide">
                     <div class="testimonials-slider__item">
                       <div class="testimonials-slider__item-image">
-                        <img src="img/testimonial2.png" alt="Client" />
+                        <img
+                          src="blocks/testimonials-slider/img/testimonial2.png"
+                          alt="Client"
+                        />
                       </div>
                       <div class="testimonials-slider__item-title">
                         Valeria Varadwaz<span>/Manager at Nike inc</span>
                       </div>
                       <div class="testimonials-slider__item-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
                       </div>
                     </div>
                   </div>
@@ -324,10 +402,16 @@
               </div>
               <div class="testimonials-slider__btns">
                 <button class="testimonials-slider__prev-btn">
-                  <img src="img/slider-arrow1.svg" alt="Prev" />
+                  <img
+                    src="blocks/testimonials-slider/img/slider-arrow1.svg"
+                    alt="Prev"
+                  />
                 </button>
                 <button class="testimonials-slider__next-btn">
-                  <img src="img/slider-arrow2.svg" alt="Next" />
+                  <img
+                    src="blocks/testimonials-slider/img/slider-arrow2.svg"
+                    alt="Next"
+                  />
                 </button>
               </div>
             </div>
@@ -340,7 +424,10 @@
             <div class="latest-news__items">
               <div class="latest-news__item">
                 <div class="latest-news__item-image">
-                  <img src="img/latestNews1.png" alt="Design Trends" />
+                  <img
+                    src="blocks/latest-news/img/latestNews1.png"
+                    alt="Design Trends"
+                  />
                 </div>
                 <div class="latest-news__item-title">
                   2020 Interior Design Trends
@@ -355,7 +442,10 @@
               </div>
               <div class="latest-news__item">
                 <div class="latest-news__item-image">
-                  <img src="img/latestNews2.png" alt="ARC Interior Design" />
+                  <img
+                    src="blocks/latest-news/img/latestNews2.png"
+                    alt="ARC Interior Design"
+                  />
                 </div>
                 <div class="latest-news__item-title">
                   2020 Interior Design Trends
@@ -417,7 +507,7 @@
           <div class="footer__inner">
             <div class="footer__item">
               <div class="footer__logo">
-                <img src="img/footerLogo.png" alt="Logo" />
+                <img src="blocks/footer/img/footerLogo.png" alt="Logo" />
               </div>
               <div class="footer__description">
                 But i must explain to you all this mistaken idea of dencouncing
@@ -497,7 +587,7 @@
                     target="_blank"
                     class="footer__social-link"
                   >
-                    <img src="img/facebook.png" alt="Facebook" />
+                    <img src="blocks/footer/img/facebook.png" alt="Facebook" />
                   </a>
                 </li>
                 <li>
@@ -506,7 +596,7 @@
                     target="_blank"
                     class="footer__social-link"
                   >
-                    <img src="img/twitter.png" alt="Twitter" />
+                    <img src="blocks/footer/img/twitter.png" alt="Twitter" />
                   </a>
                 </li>
                 <li>
@@ -515,7 +605,10 @@
                     target="_blank"
                     class="footer__social-link"
                   >
-                    <img src="img/instagram.png" alt="Instagram" />
+                    <img
+                      src="blocks/footer/img/instagram.png"
+                      alt="Instagram"
+                    />
                   </a>
                 </li>
                 <li>
@@ -524,7 +617,7 @@
                     target="_blank"
                     class="footer__social-link"
                   >
-                    <img src="img/linkedIn.png" alt="LinkedIn" />
+                    <img src="blocks/footer/img/linkedIn.png" alt="LinkedIn" />
                   </a>
                 </li>
               </ul>
@@ -545,9 +638,9 @@
     </div>
     <div class="congratulations__wrapper">
       <div class="congratulations">
-        Вітаємо! Саме сьогодні 
-        <span class="congratulations__date"></span> 
-        для користувачів із іменем 
+        Вітаємо! Саме сьогодні
+        <span class="congratulations__date"></span>
+        для користувачів із іменем
         <span class="congratulations__name"></span>
         при оформленні замовлення 120% знижка
       </div>
@@ -561,14 +654,15 @@
         <div class="preloader__item"></div>
       </div>
     </div>
+    <script src="blocks/preloader/preloader.js"></script>
+    <script src="blocks/header/header.js"></script>
+    <script src="blocks/progress-bar/progress-bar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/form.js"></script>
-    <script src="js/year.js"></script>
-    <script src="js/progress-bar.js"></script>
-    <script src="js/latest-news.js"></script>
-    <script src="js/useractivity.js"></script>
-    <script src="js/infoFromJSON.js"></script>
-    <script src="js/preloader.js"></script>
+    <script src="blocks/testimonials-slider/testimonials-slider.js"></script>
+    <script src="blocks/sign-up-form/sign-up-form.js"></script>
+    <script src="blocks/footer/footer.js"></script>
+    <script src="blocks/latest-news/latest-news.js"></script>
+    <script src="blocks/is-user-here/is-user-here.js"></script>
+    <script src="blocks/our-service/our-service.js"></script>
   </body>
 </html>
