--- a/index.html
+++ b/index.html
@@ -265,16 +265,19 @@
               <div class="completed-work__diagram-item">
                 <div class="completed-work__diagram-item-number">980</div>
                 <div class="completed-work__diagram-item-text">Project</div>
+                <div class="completed-work__diagram-item-svg"></div>
               </div>
               <div class="completed-work__diagram-item">
                 <div class="completed-work__diagram-item-number">520</div>
                 <div class="completed-work__diagram-item-text">
                   Happy Client
                 </div>
+                <div class="completed-work__diagram-item-svg"></div>
               </div>
               <div class="completed-work__diagram-item">
                 <div class="completed-work__diagram-item-number">330</div>
                 <div class="completed-work__diagram-item-text">Winners</div>
+                <div class="completed-work__diagram-item-svg"></div>
               </div>
               <div class="completed-work__diagram-item">
                 <div class="completed-work__diagram-item-number">120</div>
@@ -448,7 +451,7 @@
                   />
                 </div>
                 <div class="latest-news__item-title">
-                  2020 Interior Design Trends
+                  28 Notable Product at ARC Interior Design
                 </div>
                 <div class="latest-news__item-description">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -663,6 +666,7 @@
     <script src="blocks/footer/footer.js"></script>
     <script src="blocks/latest-news/latest-news.js"></script>
     <script src="blocks/is-user-here/is-user-here.js"></script>
+    <script src="blocks/completed-work/completed-work.js"></script>
     <script src="blocks/our-service/our-service.js"></script>
   </body>
 </html>
